# ai_drug_discovery

./: .gitignore  README.md  dvc.yaml  format.sh  pyproject.toml  requirements.txt  structure.py
config/: config.yaml
src/AIDrugDiscovery/: __init__.py
src/AIDrugDiscovery/components/: data_ingestion.py
src/AIDrugDiscovery/config/: configuration.py
src/AIDrugDiscovery/entity/: config_entity.py
src/AIDrugDiscovery/pipeline/: stage_01_data_ingestion.py
src/AIDrugDiscovery/utils/: common.py
trials/: notebook.ipynb
trials/result/: Transformer_CNN_logits.npy  loss_curve_iter.pkl  test_markdowntable.txt  valid_markdowntable.txt
trials/runs/Apr03_10-15-04_lambda404/: events.out.tfevents.1743655504.lambda404.6990.0
